# DiRT

./: pyproject.toml
configs/: config.yaml
configs/data/: alpaca_cleaned.yaml  fineweb_edu.yaml  openwebtext.yaml
configs/inference/: default.yaml
configs/model/: base_700m.yaml  dirt_1B.yaml  dirt_3B.yaml  dirt_700m.yaml
configs/train/: sft_tpu_v4_32.yaml  tpu_v4_32.yaml
dirt/eval/: __init__.py  common.py  mmlu_pro.py
dirt/inference/: __init__.py  generate.py  sampler.py
dirt/models/: __init__.py  attention.py  base_model.py  common.py  config.py  layers.py  model.py
dirt/models/blocks/: propose.py  review.py
dirt/train/: __init__.py  checkpoint.py  checkpointing.py  data.py  export.py  losses.py  schedules.py  sft_data.py  sft_trainer.py  sharding.py  state.py  state_tracking.py  trainer.py
scripts/: build_state_tracking_eval.py  eval.py  generate.py  inference.py  prepare_fineweb.py  prepare_tokenizer.py  sft.py  train.py
