[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirt"
version = "0.1.0"
description = ""
authors = [
    {name = "sh-owo"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "flax>=0.10.7",
    "orbax-checkpoint>=0.11.39",
    "numpy>=2.2.6",
    "datasets>=5.0.0",
    "sentencepiece>=0.2.1",
    "tqdm>=4.68.4",
    "hydra-core>=1.3.4",
    "omegaconf>=2.3.1",
    "wandb>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["dirt*"] 